// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.extra: - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - areas.extra: - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": <div
        data-testid="area-extra"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "areas.extra:",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - default - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "default",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.closable: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.closable: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.closable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.contentWrapperStyle: border: 10px solid green - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.contentWrapperStyle: border: 10px solid green - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"style\\":{\\"border\\":\\"10px solid green\\"},\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.contentWrapperStyle: border: 10px solid green",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.height: 500 placement: top - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.height: 500 placement: top - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": 500,
      "id": "properties.height: 500 placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.keyboard: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.keyboard: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.keyboard: false",
      "keyboard": false,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mask - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.mask - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.mask",
      "keyboard": undefined,
      "mask": false,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.maskClosable: false - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.maskClosable: false - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.maskClosable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": false,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement: bottom - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.placement: bottom - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.placement: bottom",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": "bottom",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement: left - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.placement: left - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.placement: left",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": "left",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement: top - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.placement: top - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.title - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.title",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": "Drawer title",
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.width: 500 - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.width: 500 - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.width: 500",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": 500,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - Drawer 1`] = `mocked`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - Drawer 2`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":true}",
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "contentWrapperStyle": "{\\"options\\":true}",
      "drawerStyle": "{\\"options\\":true}",
      "extra": undefined,
      "getContainer": undefined,
      "headerStyle": "{\\"options\\":true}",
      "height": undefined,
      "id": "properties.zIndex: 1100",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": "{\\"options\\":true}",
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": 1100,
    },
    Object {},
  ],
]
`;
